# facemask

./: Face Recognition Comparison.pptx  Facemask results.xlsx  README.md  build.gradle  gradle.properties  local.properties  settings.gradle
app/: .gitignore  CMakeLists.txt  build.gradle
app/jni/: Android.mk  Application.mk
app/jni/dlib_detections/: Android.mk  detector.h  jni_face_det.cpp
app/jni/dlib_mod_detections/: Android.mk  jni_face_det_mod.cpp
app/jni/haar_detections/: Android.mk  haar_detector.cpp  haar_detector.h  haar_face_detector.cpp
app/jni/jni_common/: jni_bitmap2mat.cpp  jni_fileutils.h  jni_primitives.h  jni_utils.cpp  types.h  yuv2rgb.cpp
app/jni/jni_detections/: detector.h  jni_face_det.cpp  jni_imageutils.cpp
app/jni/lbp_detections/: Android.mk  lbp_face_detector.cpp  lbp_face_detector.h
app/jni/seetaface_detections/: Android.mk  seetaface_detector.cpp
app/jni/tracker/: Android.mk  jni_imageutils.cpp  tracker.cpp
app/src/main/: AndroidManifest.xml
app/src/main/assets/: light_instruction.json
app/src/main/java/com/hfs/furyclient/: CameraActivity.java  FloatingPreviewWindow.java  ObjectTracker.java  OnGetImageListener.java
app/src/main/java/com/hfs/furyclient/activities/: HFSInstructionActivity.java
app/src/main/java/com/hfs/furyclient/data/: HFSInstruction.java
app/src/main/java/com/hfs/furyclient/opencv/: HFSImageUtils.java  HFSObjTracker.java
app/src/main/java/com/hfs/furyclient/utils/: DetectedObject.java  HFSConfig.java  HFSObjectTracker.java  HFSOnGetImageListener.java  Utilities.java
app/src/main/java/com/hfs/furyclient/views/: HFSButton.java  HFSControlView.java  HFSDrawingView.java  HFSTextView.java
app/src/main/java/com/hfs/opencv/: ImageUtils.java  ObjTracker.java
app/src/main/java/com/huawei/dlib/: DetectedFace.java  DlibDetectedFace.java  DlibFaceDetector.java  DlibModFaceDetector.java  FaceDetector.java  ImageUtils.java
app/src/main/java/com/huawei/facemask/: AsyncActionHandler.java  CameraActivity.java  Dlib.java  DlibMod.java  FaceTracker.java  FloatingPreviewWindow.java  GmsVision.java  HaarCascade.java  ImageHandler.java  ImageUtils.java  LbpCascade.java  MovieHandler.java  ObjectTracker.java  OnGetImageListener.java  Seetaface.java
app/src/main/java/com/huawei/gmsvision/: GmsFaceDetector.java
app/src/main/java/com/huawei/opencv/: HaarFaceDetector.java  LbpFaceDetector.java  ObjTracker.java
app/src/main/java/com/huawei/seetaface/: SeetafaceDetector.java
app/src/main/java/com/huawei/utils/: MediaUtils.java
app/src/main/res/drawable/: hfs_button_background.xml  hfs_button_background_disabled.xml  hfs_button_background_normal.xml  hfs_red_button_background_disabled.xml  hfs_red_button_background_normal.xml  hfs_red_button_background_pressed.xml  ic_close.xml  ic_next_step.xml  ic_previous_step.xml  ic_question_mark.xml  red_button_background.xml
app/src/main/res/drawable-v24/: hfs_red_button_background_disabled.xml  hfs_red_button_background_normal.xml
app/src/main/res/layout/: action_bar_title_view.xml  activity_camera.xml  activity_instruction.xml  activity_splash.xml  cam_window_view.xml  fragment_camera.xml  instruction_control_view.xml  instruction_hint_layout.xml  instruction_item.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
face1/: CMakeLists.txt  build.gradle  proguard-rules.pro
face1/src/main/: AndroidManifest.xml
face1/src/main/assets/: dummy_smiley_blacks.3DS  dummy_smiley_yellows.3DS  facebook.barrel
face1/src/main/assets/shaders/: debug_normals.vertex  fontshader.fragment  fontshader.vertex  n0_r0_planarreflection.fragment  shadow.fragment  shadow.vertex
face1/src/main/cpp/: MainView.cpp  MainView.hpp  jni.cpp
face1/src/main/java/grapevine/face1/: FaceView.java  MainActivity.java  MainLib.java
furyclient/app/: build.gradle
furyclient/app/jni/: Android.mk
furyclient/app/jni/jni_common/: Android.mk  jni_bitmap2mat.h  jni_fileutils.cpp  jni_primitives.h  jni_utils.cpp  jni_utils.h  rgb2yuv.cpp  rgb2yuv.h  yuv2rgb.h
furyclient/app/jni/lbp_detections/: lbp_face_detector.cpp
furyclient/app/jni/tracker/: Android.mk
furyclient/app/src/main/assets/: light_instruction.json  projector_instruction.json  vehicle_instruction.json
furyclient/app/src/main/java/com/hfs/furyclient/activities/: HFSInstructionActivity.java  HFSMainActivity.java  HFSSplashActivity.java
furyclient/app/src/main/java/com/hfs/furyclient/adapters/: HFSInstructionsAdapter.java
furyclient/app/src/main/java/com/hfs/furyclient/utils/: HFSImageUtils.java  HFSOnGetImageListener.java
furyclient/app/src/main/java/com/hfs/furyclient/views/: HFSInstructionHintView.java
furyclient/app/src/main/res/drawable/: hfs_button_background_pressed.xml  instruction_item_text_color.xml
furyclient/app/src/main/res/drawable-v24/: hfs_button_background.xml  hfs_red_button_background_pressed.xml
furyclient/app/src/main/res/layout/: activity_instruction.xml  activity_main.xml
furyclient/app/src/main/res/values/: dimens.xml
gradle/wrapper/: gradle-wrapper.properties
